--- a/VHDL/VHDL_Exc3/VHDL_Exc3.runs/impl_1/usage_statistics_webtalk.html
+++ b/VHDL/VHDL_Exc3/VHDL_Exc3.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2700185</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec  9 12:01:10 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Dec  9 13:20:48 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>0d3fd03338b64d08b2b5a578dbe7e7ab</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>14</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>20</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>ccd21de8402b596bac5314b0d281fd06</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>ccd21de8402b596bac5314b0d281fd06</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-8500 CPU @ 3.00GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1112.360 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>3848.834 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 18.04.3 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>16.000 GB</TD>
@@ -32,95 +32,97 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>basedialog_cancel=3</TD>
-   <TD>basedialog_ok=131</TD>
-   <TD>cmdmsgdialog_ok=4</TD>
+   <TD>basedialog_ok=175</TD>
+   <TD>cmdmsgdialog_ok=6</TD>
    <TD>constraintschooserpanel_create_file=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>createconstraintsfilepanel_file_name=2</TD>
    <TD>createsrcfiledialog_file_name=1</TD>
    <TD>createsrcfiledialog_file_type=1</TD>
    <TD>expruntreepanel_exp_run_tree_table=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=81</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=84</TD>
    <TD>filtertoolbar_hide_all=2</TD>
    <TD>filtertoolbar_show_all=2</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=48</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_category=1</TD>
-   <TD>fpgachooser_family=1</TD>
-   <TD>fpgachooser_fpga_table=1</TD>
-   <TD>fpgachooser_package=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_speed=1</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=55</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_category=2</TD>
+   <TD>fpgachooser_family=2</TD>
+   <TD>fpgachooser_fpga_table=2</TD>
+   <TD>fpgachooser_package=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>fpgachooser_speed=2</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>hardwaretreepanel_hardware_tree_table=9</TD>
    <TD>launchpanel_dont_show_this_dialog_again=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_constraints=2</TD>
    <TD>mainmenumgr_design_hubs=1</TD>
-   <TD>mainmenumgr_edit=6</TD>
-   <TD>mainmenumgr_file=12</TD>
+   <TD>mainmenumgr_edit=8</TD>
+   <TD>mainmenumgr_file=18</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_help=6</TD>
    <TD>mainmenumgr_open_recent_project=2</TD>
-   <TD>mainmenumgr_project=8</TD>
-   <TD>mainmenumgr_reports=12</TD>
+   <TD>mainmenumgr_project=11</TD>
+   <TD>mainmenumgr_reports=14</TD>
 </TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_tools=2</TD>
-   <TD>mainmenumgr_view=7</TD>
+   <TD>mainmenumgr_view=9</TD>
    <TD>mainmenumgr_window=42</TD>
    <TD>mainwinmenumgr_layout=16</TD>
-</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=5</TD>
    <TD>netlisttreeview_netlist_tree=6</TD>
    <TD>pacommandnames_add_sources=2</TD>
-   <TD>pacommandnames_auto_connect_target=2</TD>
+   <TD>pacommandnames_auto_connect_target=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=8</TD>
-   <TD>pacommandnames_goto_netlist_design=9</TD>
-   <TD>pacommandnames_open_hardware_manager=5</TD>
-   <TD>pacommandnames_open_target=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_ports_window=9</TD>
-   <TD>pacommandnames_reports_window=1</TD>
-   <TD>pacommandnames_run_bitgen=13</TD>
-   <TD>pacommandnames_run_implementation=8</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_save_design=1</TD>
+   <TD>pacommandnames_goto_netlist_design=10</TD>
+   <TD>pacommandnames_new_project=1</TD>
+   <TD>pacommandnames_open_hardware_manager=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_target=1</TD>
+   <TD>pacommandnames_ports_window=9</TD>
+   <TD>pacommandnames_reports_window=5</TD>
+   <TD>pacommandnames_run_bitgen=19</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_run_implementation=12</TD>
+   <TD>pacommandnames_save_design=1</TD>
    <TD>pacommandnames_set_as_top=1</TD>
-   <TD>paviews_project_summary=16</TD>
-   <TD>programdebugtab_open_target=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_program_device=16</TD>
-   <TD>programfpgadialog_program=14</TD>
-   <TD>projectnamechooser_project_name=1</TD>
+   <TD>paviews_project_summary=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programdebugtab_open_target=3</TD>
+   <TD>programdebugtab_program_device=22</TD>
+   <TD>programfpgadialog_program=20</TD>
+   <TD>projectnamechooser_choose_project_location=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=2</TD>
    <TD>rdicommands_custom_commands=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdicommands_delete=1</TD>
-   <TD>rdicommands_save_file=6</TD>
-   <TD>saveprojectutils_save=23</TD>
+   <TD>rdicommands_delete=1</TD>
+   <TD>rdicommands_save_file=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>saveprojectutils_save=30</TD>
    <TD>signaltreepanel_signal_tree_table=85</TD>
-</TR><TR ALIGN='LEFT'>   <TD>specifylibrarydialog_library_name=1</TD>
+   <TD>specifylibrarydialog_library_name=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
-   <TD>srcchooserpanel_add_or_create_source_file=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_or_create_source_file=1</TD>
    <TD>srcchooserpanel_create_file=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=7</TD>
+   <TD>srcmenu_ip_hierarchy=7</TD>
    <TD>srcmenu_refresh_hierarchy=1</TD>
-   <TD>srcmenu_set_library=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_set_library=1</TD>
    <TD>syntheticagettingstartedview_recent_projects=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>syntheticastatemonitor_cancel=1</TD>
+   <TD>syntheticastatemonitor_cancel=1</TD>
    <TD>taskbanner_close=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=3</TD>
-   <TD>autoconnecttarget=2</TD>
+   <TD>autoconnecttarget=3</TD>
    <TD>editdelete=1</TD>
    <TD>editproperties=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=16</TD>
-   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=22</TD>
+   <TD>newproject=2</TD>
+   <TD>openhardwaremanager=11</TD>
    <TD>opentarget=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runbitgen=15</TD>
-   <TD>runimplementation=14</TD>
-   <TD>runsynthesis=26</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=21</TD>
+   <TD>runimplementation=20</TD>
+   <TD>runsynthesis=33</TD>
    <TD>savedesign=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>settopnode=1</TD>
-   <TD>showview=21</TD>
+   <TD>showview=27</TD>
    <TD>viewtaskimplementation=1</TD>
    <TD>viewtaskprojectmanager=3</TD>
 </TR><TR ALIGN='LEFT'>   <TD>viewtasksynthesis=15</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=4</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -159,16 +161,19 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=2</TD>
     <TD>carry4=4</TD>
     <TD>fdce=18</TD>
-    <TD>fdre=10</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=2</TD>
-    <TD>ibuf=2</TD>
-    <TD>lut1=3</TD>
-    <TD>lut2=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=3</TD>
-    <TD>lut5=18</TD>
+    <TD>fdre=35</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=4</TD>
+    <TD>gnd=2</TD>
+    <TD>ibuf=3</TD>
+    <TD>lut1=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=5</TD>
+    <TD>lut3=5</TD>
+    <TD>lut4=30</TD>
+    <TD>lut5=29</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=24</TD>
     <TD>obuf=12</TD>
     <TD>vcc=2</TD>
 </TR>   </TABLE>
@@ -176,16 +181,19 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=2</TD>
     <TD>carry4=4</TD>
     <TD>fdce=18</TD>
-    <TD>fdre=10</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=2</TD>
-    <TD>ibuf=2</TD>
-    <TD>lut1=3</TD>
-    <TD>lut2=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=3</TD>
-    <TD>lut5=18</TD>
+    <TD>fdre=35</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=4</TD>
+    <TD>gnd=2</TD>
+    <TD>ibuf=3</TD>
+    <TD>lut1=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=5</TD>
+    <TD>lut3=5</TD>
+    <TD>lut4=30</TD>
+    <TD>lut5=29</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=24</TD>
     <TD>obuf=12</TD>
     <TD>vcc=2</TD>
 </TR>   </TABLE>
@@ -254,8 +262,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>clocking</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufgctrl_available=32</TD>
     <TD>bufgctrl_fixed=0</TD>
-    <TD>bufgctrl_used=1</TD>
-    <TD>bufgctrl_util_percentage=3.13</TD>
+    <TD>bufgctrl_used=2</TD>
+    <TD>bufgctrl_util_percentage=6.25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufhce_available=72</TD>
     <TD>bufhce_fixed=0</TD>
     <TD>bufhce_used=0</TD>
@@ -354,24 +362,30 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
-    <TD>bufg_used=1</TD>
+    <TD>bufg_used=2</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>carry4_used=4</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdce_functional_category=Flop &amp; Latch</TD>
     <TD>fdce_used=18</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=2</TD>
-    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=8</TD>
+    <TD>fdre_used=34</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
+    <TD>fdse_used=4</TD>
+    <TD>ibuf_functional_category=IO</TD>
+    <TD>ibuf_used=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
+    <TD>lut1_used=8</TD>
+    <TD>lut2_functional_category=LUT</TD>
+    <TD>lut2_used=5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
+    <TD>lut3_used=5</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=3</TD>
+    <TD>lut4_used=31</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=18</TD>
-    <TD>obuf_functional_category=IO</TD>
+    <TD>lut5_used=33</TD>
+    <TD>lut6_functional_category=LUT</TD>
+    <TD>lut6_used=19</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=12</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -388,34 +402,34 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=26</TD>
-    <TD>lut_as_logic_util_percentage=0.13</TD>
+    <TD>lut_as_logic_used=76</TD>
+    <TD>lut_as_logic_util_percentage=0.37</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=29</TD>
-    <TD>register_as_flip_flop_util_percentage=0.07</TD>
+    <TD>register_as_flip_flop_used=56</TD>
+    <TD>register_as_flip_flop_util_percentage=0.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=26</TD>
-    <TD>slice_luts_util_percentage=0.13</TD>
+    <TD>slice_luts_used=76</TD>
+    <TD>slice_luts_util_percentage=0.37</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=29</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
+    <TD>slice_registers_used=56</TD>
+    <TD>slice_registers_util_percentage=0.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=26</TD>
-    <TD>lut_as_logic_util_percentage=0.13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=76</TD>
+    <TD>lut_as_logic_util_percentage=0.37</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
@@ -423,35 +437,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=3</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=3</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
-    <TD>register_driven_from_outside_the_slice_used=3</TD>
-    <TD>register_driven_from_within_the_slice_fixed=3</TD>
-    <TD>register_driven_from_within_the_slice_used=26</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=2</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=2</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=6</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=6</TD>
+    <TD>register_driven_from_outside_the_slice_used=8</TD>
+    <TD>register_driven_from_within_the_slice_fixed=8</TD>
+    <TD>register_driven_from_within_the_slice_used=48</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=29</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
-    <TD>slice_used=15</TD>
-    <TD>slice_util_percentage=0.18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=56</TD>
+    <TD>slice_registers_util_percentage=0.13</TD>
+    <TD>slice_used=30</TD>
+    <TD>slice_util_percentage=0.37</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=10</TD>
+    <TD>slicel_used=15</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=5</TD>
+    <TD>slicem_used=15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=2</TD>
-    <TD>unique_control_sets_util_percentage=0.02</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.02</TD>
-    <TD>using_o5_and_o6_used=6</TD>
-    <TD>using_o5_output_only_fixed=6</TD>
+    <TD>unique_control_sets_used=11</TD>
+    <TD>unique_control_sets_util_percentage=0.13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.13</TD>
+    <TD>using_o5_and_o6_used=25</TD>
+    <TD>using_o5_output_only_fixed=25</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=20</TD>
+    <TD>using_o6_output_only_used=51</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -542,8 +556,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:18s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=582.375MB</TD>
-    <TD>memory_peak=2044.531MB</TD>
+    <TD>memory_gain=601.344MB</TD>
+    <TD>memory_peak=2063.496MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
